# funeral-readings-planner

./: .gitignore  README.md  THIRD-PARTY-NOTICES.txt  books.js  boot.js  dropcap.js  easter.js  funeral-core.js  help-popover.js  index.html  library-io.js  main.js  mobile.css  mobile.js  package-lock.json  package.json  prayers.json  readings.json  search.js  share.js  theme.js  vite.config.js
.github/workflows/: deploy.yml  desktop.yml
public/: site.webmanifest  theme.css
public/fonts/licenses/: Juuji-NOTICE.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
